{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 51,
  "lineage": "61a78cbd-9f63-da41-11e6-22bb2e4fe004",
  "resources": [
    {
      "module": "module.ec2_cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "oc_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098f16afa9edf40be",
            "arn": "arn:aws:ec2:us-east-1::instance/i-0bad1249dc249c730",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bad1249dc249c730",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansiblekey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0cdc80874965239cd",
            "private_dns": "ip-10-0-3-242.ec2.internal",
            "private_ip": "10.0.3.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-017719a5e5162eb15",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0e1060c513458fc",
            "tags": {
              "Environment": "dev",
              "Name": "oc_ec2_instance-1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "oc_ec2_instance-1"
            },
            "vpc_security_group_ids": [
              "sg-0ebe64864dac78e21"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098f16afa9edf40be",
            "arn": "arn:aws:ec2:us-east-1::instance/i-0717a91bacefd28e2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0717a91bacefd28e2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansiblekey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0af4feea0472f9037",
            "private_dns": "ip-10-0-3-217.ec2.internal",
            "private_ip": "10.0.3.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-054911e2df735bacb",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0e1060c513458fc",
            "tags": {
              "Environment": "dev",
              "Name": "oc_ec2_instance-2",
              "Terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "oc_ec2_instance-2"
            },
            "vpc_security_group_ids": [
              "sg-0ebe64864dac78e21"
            ]
          }
        }
      ]
    },
    {
      "module": "module.oc_servers_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oc_sg_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039168849899:security-group/sg-0ebe64864dac78e21",
            "description": "Security group for web-server with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-0ebe64864dac78e21",
            "ingress": [],
            "name": "oc_sg-20201120022711183100000002",
            "name_prefix": "oc_sg-",
            "owner_id": "039168849899",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "oc_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c404d1d8a987a6f6"
          },
          "dependencies": [
            "module.oc_vpc.aws_vpc.oc_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.oc_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0720ac6f425caec0c",
            "domain": "vpc",
            "id": "eipalloc-0aca1df1770fb355c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-091137991732c4df9",
            "private_dns": "ip-10-0-101-229.ec2.internal",
            "private_ip": "10.0.101.229",
            "public_dns": "ec2-3-221-191-145.compute-1.amazonaws.com",
            "public_ip": "3.221.191.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a52b5b82051dbdd5",
            "domain": "vpc",
            "id": "eipalloc-0105b5a574d7cbce5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01b2d8b3aad8326bf",
            "private_dns": "ip-10-0-102-219.ec2.internal",
            "private_ip": "10.0.102.219",
            "public_dns": "ec2-18-205-213-215.compute-1.amazonaws.com",
            "public_ip": "18.205.213.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-us-east-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fc751a88375e5c77",
            "domain": "vpc",
            "id": "eipalloc-0b44806969ca2ea28",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04e597893bd566369",
            "private_dns": "ip-10-0-103-162.ec2.internal",
            "private_ip": "10.0.103.162",
            "public_dns": "ec2-54-198-230-214.compute-1.amazonaws.com",
            "public_ip": "54.198.230.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-us-east-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.oc_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "oc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1::internet-gateway/igw-0761687b40788fb8e",
            "id": "igw-0761687b40788fb8e",
            "owner_id": "039168849899",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c404d1d8a987a6f6"
          },
          "dependencies": [
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.oc_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "oc_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aca1df1770fb355c",
            "id": "nat-074e720fa9563ac20",
            "network_interface_id": "eni-091137991732c4df9",
            "private_ip": "10.0.101.229",
            "public_ip": "3.221.191.145",
            "subnet_id": "subnet-0a5056feeb3aabe0c",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.oc_vpc.aws_eip.nat",
            "module.oc_vpc.aws_internet_gateway.oc_igw",
            "module.oc_vpc.aws_subnet.public",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0105b5a574d7cbce5",
            "id": "nat-06351197c78e61516",
            "network_interface_id": "eni-01b2d8b3aad8326bf",
            "private_ip": "10.0.102.219",
            "public_ip": "18.205.213.215",
            "subnet_id": "subnet-01c31674900c4c555",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.oc_vpc.aws_eip.nat",
            "module.oc_vpc.aws_internet_gateway.oc_igw",
            "module.oc_vpc.aws_subnet.public",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b44806969ca2ea28",
            "id": "nat-0312402b59c6ef193",
            "network_interface_id": "eni-04e597893bd566369",
            "private_ip": "10.0.103.162",
            "public_ip": "54.198.230.214",
            "subnet_id": "subnet-077ac551d1cd4ed18",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-us-east-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.oc_vpc.aws_eip.nat",
            "module.oc_vpc.aws_internet_gateway.oc_igw",
            "module.oc_vpc.aws_subnet.public",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.oc_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08bc9eb979f5c1d901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-074e720fa9563ac20",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08bc9eb979f5c1d90",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.oc_vpc.aws_eip.nat",
            "module.oc_vpc.aws_internet_gateway.oc_igw",
            "module.oc_vpc.aws_nat_gateway.oc_natgw",
            "module.oc_vpc.aws_route_table.private",
            "module.oc_vpc.aws_subnet.public",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f6f2c07b70d033031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06351197c78e61516",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6f2c07b70d03303",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.oc_vpc.aws_eip.nat",
            "module.oc_vpc.aws_internet_gateway.oc_igw",
            "module.oc_vpc.aws_nat_gateway.oc_natgw",
            "module.oc_vpc.aws_route_table.private",
            "module.oc_vpc.aws_subnet.public",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01cd8c814a50d63af1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0312402b59c6ef193",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01cd8c814a50d63af",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.oc_vpc.aws_eip.nat",
            "module.oc_vpc.aws_internet_gateway.oc_igw",
            "module.oc_vpc.aws_nat_gateway.oc_natgw",
            "module.oc_vpc.aws_route_table.private",
            "module.oc_vpc.aws_subnet.public",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.oc_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0761687b40788fb8e",
            "id": "r-rtb-04695d46916dc1ca41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04695d46916dc1ca4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.oc_vpc.aws_internet_gateway.oc_igw",
            "module.oc_vpc.aws_route_table.public",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.oc_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08bc9eb979f5c1d90",
            "owner_id": "039168849899",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-074e720fa9563ac20",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c404d1d8a987a6f6"
          },
          "dependencies": [
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f6f2c07b70d03303",
            "owner_id": "039168849899",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06351197c78e61516",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c404d1d8a987a6f6"
          },
          "dependencies": [
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01cd8c814a50d63af",
            "owner_id": "039168849899",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0312402b59c6ef193",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c404d1d8a987a6f6"
          },
          "dependencies": [
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.oc_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04695d46916dc1ca4",
            "owner_id": "039168849899",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0761687b40788fb8e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c404d1d8a987a6f6"
          },
          "dependencies": [
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.oc_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0befd44906ce72418",
            "route_table_id": "rtb-08bc9eb979f5c1d90",
            "subnet_id": "subnet-0f8ff3bb2e643f37f"
          },
          "dependencies": [
            "module.oc_vpc.aws_route_table.private",
            "module.oc_vpc.aws_subnet.private_subnet",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094bcd8f4e7276445",
            "route_table_id": "rtb-0f6f2c07b70d03303",
            "subnet_id": "subnet-06181849ac64a8af1"
          },
          "dependencies": [
            "module.oc_vpc.aws_route_table.private",
            "module.oc_vpc.aws_subnet.private_subnet",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017ecd68f8e4b67a2",
            "route_table_id": "rtb-01cd8c814a50d63af",
            "subnet_id": "subnet-0b0e1060c513458fc"
          },
          "dependencies": [
            "module.oc_vpc.aws_route_table.private",
            "module.oc_vpc.aws_subnet.private_subnet",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.oc_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b79ef87fe64cb20",
            "route_table_id": "rtb-04695d46916dc1ca4",
            "subnet_id": "subnet-0a5056feeb3aabe0c"
          },
          "dependencies": [
            "module.oc_vpc.aws_route_table.public",
            "module.oc_vpc.aws_subnet.public",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b164fb6ae16e3561",
            "route_table_id": "rtb-04695d46916dc1ca4",
            "subnet_id": "subnet-01c31674900c4c555"
          },
          "dependencies": [
            "module.oc_vpc.aws_route_table.public",
            "module.oc_vpc.aws_subnet.public",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db0de04804d4d2c4",
            "route_table_id": "rtb-04695d46916dc1ca4",
            "subnet_id": "subnet-077ac551d1cd4ed18"
          },
          "dependencies": [
            "module.oc_vpc.aws_route_table.public",
            "module.oc_vpc.aws_subnet.public",
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.oc_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039168849899:subnet/subnet-0f8ff3bb2e643f37f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f8ff3bb2e643f37f",
            "map_public_ip_on_launch": false,
            "owner_id": "039168849899",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c404d1d8a987a6f6"
          },
          "dependencies": [
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039168849899:subnet/subnet-06181849ac64a8af1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06181849ac64a8af1",
            "map_public_ip_on_launch": false,
            "owner_id": "039168849899",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c404d1d8a987a6f6"
          },
          "dependencies": [
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039168849899:subnet/subnet-0b0e1060c513458fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b0e1060c513458fc",
            "map_public_ip_on_launch": false,
            "owner_id": "039168849899",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c404d1d8a987a6f6"
          },
          "dependencies": [
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.oc_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039168849899:subnet/subnet-0a5056feeb3aabe0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0a5056feeb3aabe0c",
            "map_public_ip_on_launch": true,
            "owner_id": "039168849899",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c404d1d8a987a6f6"
          },
          "dependencies": [
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039168849899:subnet/subnet-01c31674900c4c555",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-01c31674900c4c555",
            "map_public_ip_on_launch": true,
            "owner_id": "039168849899",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c404d1d8a987a6f6"
          },
          "dependencies": [
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039168849899:subnet/subnet-077ac551d1cd4ed18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-077ac551d1cd4ed18",
            "map_public_ip_on_launch": true,
            "owner_id": "039168849899",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c404d1d8a987a6f6"
          },
          "dependencies": [
            "module.oc_vpc.aws_vpc.oc_vpc",
            "module.oc_vpc.aws_vpc_ipv4_cidr_block_association.oc_ip4_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.oc_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "oc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1::vpc/vpc-0c404d1d8a987a6f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b5feb82639abc38a",
            "default_route_table_id": "rtb-0094a616c635f71df",
            "default_security_group_id": "sg-0bd202118b6b7aa54",
            "dhcp_options_id": "dopt-e3d3d398",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c404d1d8a987a6f6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0094a616c635f71df",
            "owner_id": "039168849899",
            "tags": {
              "Environment": "dev",
              "Name": "oc-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}